--- a/index.html
+++ b/index.html
@@ -23,11 +23,9 @@
           <ul>
             <li><a href="tours.html" title="Our tours">Tours <br /><span class="tagline">follow our bliss</span></a>
               <ul>
-                <li><a href="tours.html" title="Our tours">All Tours</a></li>
-                <li><a href="tours.html" title="find tours">Tours by Activity</a></li>
-                <li><a href="tours.html" title="find tours">Tours by Region</a></li>
-                <li><a href="tours.html" title="find tours">Tour Finder</a></li>
-              </ul>
+                <li><a href="tours.html" title="Our tours">About Me</a></li>
+                <li><a href="tours.html" title="find tours">Download Resume</a></li>
+                </ul>
             </li>
             <li><a href="mission.html" title="What we believe">Mission <br /><span class="tagline">what makes us different?</span></a></li>
             <li><a href="resources.html" title="planning resources">Resources <br /><span class="tagline">plan your trip</span></a>
