--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
 Data Analyst | Data Story Teller | Freelancer | Online Tutor<br>
 Department of Computer Science and Engineering,<br>
 Aurora's Engineering College, <br>Abids, Hyderabad, India.<br>
- Email: ushawin2020@gmail.com, Mobile:9994463686<br>
+ Email: ushawin2020@gmail.com,<br> Mobile:9994463686<br>
 www.drtmushacoder.wixsite.com/drtmusha-resume (Personel Website Link)<br>
-www.github.com/DrTMUSHACoder   www.linkedin.com/in/dr-t-m-usha-89365b1b0</h3>
+www.github.com/DrTMUSHACoder <br>  www.linkedin.com/in/dr-t-m-usha-89365b1b0</h3>
       </div>
 
       <div id="contentWrapper">
